--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,6 +3,7 @@
     "baseUrl": ".",
     "paths": {
       "@assets/*": ["./src/assets/*"],
+      "@config/*": ["./src/config/*"],
       "@constants/*": ["./src/constants/*"],
       "@layout/*": ["./src/layout/*"],
       "@pages/*": ["./src/pages/*"],
