--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "express": "^4.18.2",
+    "firebase": "^9.14.0",
     "install": "^0.13.0",
     "npm": "^9.1.2",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
