--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,9 @@
 REACT_APP_API_URL = https://dev-apis.kracker.kr/vendor
+
+REACT_APP_APIKEY = "AIzaSyA-YjIpkKDVLA66XsRTvDajChLPeG1FVEw"
+REACT_APP_AUTH_DOMAIN = "vendor-dev-a8bda.firebaseapp.com"
+REACT_APP_PROJECT_ID = "vendor-dev-a8bda"
+REACT_APP_STORAGE_BUCKET = "vendor-dev-a8bda.appspot.com"
+REACT_APP_MESSAGING_SENDER_ID = "879111240156"
+REACT_APP_APP_KEY = "1:879111240156:web:4b54516b48588724c03719"
+REACT_APP_MEASUREMENT_ID = "G-JYL2W2STP1"
