--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,9 @@
 REACT_APP_API_URL = https://apis.kracker.kr/vendor
+
+REACT_APP_APIKEY = "AIzaSyBPHNckXq4woRuLWQ4mEtbf3htfef32Qo4"
+REACT_APP_AUTH_DOMAIN = "vendor-30aa1.firebaseapp.com"
+REACT_APP_PROJECT_ID = "vendor-30aa1"
+REACT_APP_STORAGE_BUCKET = "vendor-30aa1.appspot.com"
+REACT_APP_MESSAGING_SENDER_ID = "464722234545"
+REACT_APP_APP_KEY = "1:464722234545:web:90ff5dc49c968662d3a690"
+REACT_APP_MEASUREMENT_ID = "G-7M50TYNV1H"
